fix: alignment

--- a/less/admin.less
+++ b/less/admin.less
@@ -32,10 +32,6 @@
     }
   }
 
-  .SaveButton {
-    margin-left: 8px;
-  }
-
   &-NewTagMappingModal {
     label {
       display: block;
